<resources>
    <string name="app_name">The Spark Institute App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spark_institute_logo">Spark Institute Logo</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="do_you_have_account">Do you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_spark_institute_logo">Sign Up Spark Institute Logo</string>
    <string name="Signup_sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="spark_adds">Spark Adds</string>
    <string name="navodaya">Navodaya</string>
    <string name="competitive">Competitive</string>
    <string name="tech_programming"><![CDATA[Tech & Programming]]></string>
    <string name="computer">Computer</string>
    <string name="coaching">Coaching</string>
    <string name="free_study_material">Free Study Material</string>
    <string name="study_material">Study Material</string>
</resources>
