<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9E5"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/spark_logo"
        android:layout_gravity="center"
        android:contentDescription="@string/sign_up_spark_institute_logo"
        android:layout_marginBottom="8dp"/>

    <!-- Sign up Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signup_sign_up"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"/>

    <!-- Full Name -->
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/fullName"
        android:layout_height="48dp"
        android:hint="@string/full_name"
        android:paddingLeft="16dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="#AAA763"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>

    <!-- Email Address -->
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/email"
        android:layout_height="48dp"
        android:hint="@string/email_address"
        android:paddingLeft="16dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="#AAA763"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>

    <!-- Create Password -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/createPassword"
        android:hint="@string/create_password"
        android:paddingLeft="16dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="#AAA763"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="12dp"/>

    <!-- Confirm Password -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/confirmPassword"
        android:hint="@string/confirm_password"
        android:paddingLeft="16dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="#AAA763"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"/>

    <!-- Sign up Button -->
    <Button
        android:layout_width="match_parent"
        android:id="@+id/sign_upBtn"
        android:layout_height="48dp"
        android:text="Sign up"
        android:backgroundTint="#FFD20A"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="12dp"/>

    <!-- Log In Link -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do you have account ? "
        android:textColor="#000000"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/Login"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:textColor="#FFD43B"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"/>

</LinearLayout>
